[gd_scene load_steps=28 format=3 uid="uid://ddhbq3qf847pa"]

[ext_resource type="Texture2D" uid="uid://ccadwpjs7wooj" path="res://res/asset/popscreen.png" id="1_8uoho"]
[ext_resource type="Script" path="res://res/script/misc/pop_up.gd" id="2_ydfna"]
[ext_resource type="FontFile" uid="uid://c21dfc6qx4eki" path="res://res/joystix monospace.otf" id="3_woisq"]
[ext_resource type="Texture2D" uid="uid://pt1xfeuj643c" path="res://res/asset/newStars.png" id="4_ky0je"]
[ext_resource type="Texture2D" uid="uid://8ce4qjoio00i" path="res://res/asset/btn_new.png" id="5_xtnak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ubn1t"]
atlas = ExtResource("1_8uoho")
region = Rect2(0, 0, 3200, 1024)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w3dlk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_edeg4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rrws3"]
atlas = ExtResource("4_ky0je")

[sub_resource type="AtlasTexture" id="AtlasTexture_qvebc"]
atlas = ExtResource("5_xtnak")
region = Rect2(9049, 75, 151, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_twe73"]
atlas = ExtResource("5_xtnak")
region = Rect2(9369, 75, 151, 153)

[sub_resource type="CircleShape2D" id="CircleShape2D_gagju"]
radius = 72.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mi633"]
atlas = ExtResource("5_xtnak")
region = Rect2(10329, 75, 153, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewo82"]
atlas = ExtResource("5_xtnak")
region = Rect2(10649, 75, 153, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hakb"]
atlas = ExtResource("5_xtnak")
region = Rect2(10969, 75, 153, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4tvi"]
atlas = ExtResource("5_xtnak")
region = Rect2(11289, 75, 153, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvdtd"]
atlas = ExtResource("5_xtnak")
region = Rect2(9689, 75, 153, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfoj4"]
atlas = ExtResource("5_xtnak")
region = Rect2(10009, 75, 153, 153)

[sub_resource type="Animation" id="Animation_d4i1f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause_con/VBoxContainer/b1/Panel/star:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause_con/VBoxContainer/b2/Panel/star:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pause_con/VBoxContainer/b3/Panel/star:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_yldwr"]
resource_name = "b0"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause_con/VBoxContainer/b1/Panel/star:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause_con/VBoxContainer/b2/Panel/star:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause_con/VBoxContainer/b3/Panel/star:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_flito"]
resource_name = "b1"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause_con/VBoxContainer/b1/Panel/star:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause_con/VBoxContainer/b2/Panel/star:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause_con/VBoxContainer/b3/Panel/star:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_dmv58"]
resource_name = "b2"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause_con/VBoxContainer/b1/Panel/star:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause_con/VBoxContainer/b2/Panel/star:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause_con/VBoxContainer/b3/Panel/star:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_s4oq7"]
resource_name = "b3"
length = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pause_con/VBoxContainer/b1/Panel/star:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pause_con/VBoxContainer/b2/Panel/star:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pause_con/VBoxContainer/b3/Panel/star:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_whvb2"]
resource_name = "clear"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_jxqm1"]
resource_name = "failed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_jyo0s"]
resource_name = "pause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46mcd"]
_data = {
"RESET": SubResource("Animation_d4i1f"),
"b0": SubResource("Animation_yldwr"),
"b1": SubResource("Animation_flito"),
"b2": SubResource("Animation_dmv58"),
"b3": SubResource("Animation_s4oq7"),
"clear": SubResource("Animation_whvb2"),
"failed": SubResource("Animation_jxqm1"),
"pause": SubResource("Animation_jyo0s")
}

[node name="papan" type="Sprite2D"]
texture = SubResource("AtlasTexture_ubn1t")
hframes = 4
script = ExtResource("2_ydfna")

[node name="clear_con" type="BoxContainer" parent="."]
visible = false
anchors_preset = -1
anchor_top = 0.267
anchor_right = 0.975
anchor_bottom = 0.937
offset_left = -387.0
offset_top = -557.408
offset_right = -386.8
offset_bottom = -511.488
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="clear_con"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="clear_con/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_woisq")
theme_override_font_sizes/font_size = 55
text = "

Demo Selesai!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="clear_con/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_woisq")
theme_override_font_sizes/font_size = 45
text = "

terima kasih telah
memainkan demo ini
........"
horizontal_alignment = 1

[node name="pause_con" type="BoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.267
anchor_right = 0.975
anchor_bottom = 0.937
offset_left = -387.0
offset_top = -557.408
offset_right = -386.8
offset_bottom = -511.488
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="pause_con"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="pause_con/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="b1" type="HBoxContainer" parent="pause_con/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="pause_con/VBoxContainer/b1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_edeg4")

[node name="star" type="Sprite2D" parent="pause_con/VBoxContainer/b1/Panel"]
scale = Vector2(0.35, 0.35)
texture = SubResource("AtlasTexture_rrws3")
offset = Vector2(530, 120)
hframes = 2
frame = 1

[node name="c1" type="Label" parent="pause_con/VBoxContainer/b1"]
custom_minimum_size = Vector2(466, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_woisq")
theme_override_font_sizes/font_size = 60
text = "Time < 100"
horizontal_alignment = 3
vertical_alignment = 1
justification_flags = 131
clip_text = true

[node name="Panel2" type="Panel" parent="pause_con/VBoxContainer/b1"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="b2" type="HBoxContainer" parent="pause_con/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="pause_con/VBoxContainer/b2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_edeg4")

[node name="star" type="Sprite2D" parent="pause_con/VBoxContainer/b2/Panel"]
scale = Vector2(0.35, 0.35)
texture = SubResource("AtlasTexture_rrws3")
offset = Vector2(530, 120)
hframes = 2
frame = 1

[node name="c2" type="Label" parent="pause_con/VBoxContainer/b2"]
custom_minimum_size = Vector2(466, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_woisq")
theme_override_font_sizes/font_size = 60
text = "Time < 100"
horizontal_alignment = 3
vertical_alignment = 1
justification_flags = 131
clip_text = true

[node name="Panel2" type="Panel" parent="pause_con/VBoxContainer/b2"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="b3" type="HBoxContainer" parent="pause_con/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="pause_con/VBoxContainer/b3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_edeg4")

[node name="star" type="Sprite2D" parent="pause_con/VBoxContainer/b3/Panel"]
scale = Vector2(0.35, 0.35)
texture = SubResource("AtlasTexture_rrws3")
offset = Vector2(530, 120)
hframes = 2
frame = 1

[node name="c3" type="Label" parent="pause_con/VBoxContainer/b3"]
custom_minimum_size = Vector2(466, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_woisq")
theme_override_font_sizes/font_size = 60
text = "Time < 100"
horizontal_alignment = 3
vertical_alignment = 1
justification_flags = 131
clip_text = true

[node name="Panel2" type="Panel" parent="pause_con/VBoxContainer/b3"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="btns_con" type="HBoxContainer" parent="pause_con/VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="pause_con/VBoxContainer/btns_con"]
custom_minimum_size = Vector2(101, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="Panel3" type="Panel" parent="pause_con/VBoxContainer/btns_con"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="exit" type="TouchScreenButton" parent="pause_con/VBoxContainer/btns_con/Panel3"]
position = Vector2(0, 10)
texture_normal = SubResource("AtlasTexture_qvebc")
texture_pressed = SubResource("AtlasTexture_twe73")
shape = SubResource("CircleShape2D_gagju")
shape_visible = false

[node name="Panel4" type="Panel" parent="pause_con/VBoxContainer/btns_con"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="resume" type="TouchScreenButton" parent="pause_con/VBoxContainer/btns_con/Panel4"]
position = Vector2(0, 40)
texture_normal = SubResource("AtlasTexture_mi633")
texture_pressed = SubResource("AtlasTexture_ewo82")
shape = SubResource("CircleShape2D_gagju")
shape_visible = false
action = "pause"

[node name="restart" type="TouchScreenButton" parent="pause_con/VBoxContainer/btns_con/Panel4"]
visible = false
position = Vector2(0, 40)
texture_normal = SubResource("AtlasTexture_7hakb")
texture_pressed = SubResource("AtlasTexture_t4tvi")
shape = SubResource("CircleShape2D_gagju")
shape_visible = false
action = "reset"

[node name="Panel5" type="Panel" parent="pause_con/VBoxContainer/btns_con"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="help" type="TouchScreenButton" parent="pause_con/VBoxContainer/btns_con/Panel5"]
position = Vector2(0, 10)
texture_normal = SubResource("AtlasTexture_nvdtd")
texture_pressed = SubResource("AtlasTexture_cfoj4")
shape = SubResource("CircleShape2D_gagju")
shape_visible = false
action = "setel"

[node name="Panel6" type="Panel" parent="pause_con/VBoxContainer/btns_con"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w3dlk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["pop"]]
libraries = {
"": SubResource("AnimationLibrary_46mcd")
}

[connection signal="pressed" from="pause_con/VBoxContainer/btns_con/Panel3/exit" to="." method="exit"]
[connection signal="pressed" from="pause_con/VBoxContainer/btns_con/Panel4/resume" to="." method="resume"]
[connection signal="pressed" from="pause_con/VBoxContainer/btns_con/Panel4/restart" to="." method="restartLvl"]
[connection signal="pressed" from="pause_con/VBoxContainer/btns_con/Panel5/help" to="." method="help"]
